[gd_scene load_steps=7 format=3 uid="uid://mkvxdbo067mv"]

[ext_resource type="Script" uid="uid://b4s6kcb4bs43a" path="res://Code/Scenes/UI/List/swap_box.gd" id="1_7u88y"]
[ext_resource type="PackedScene" uid="uid://bttlpdvhmocn3" path="res://Scenes/UI/Lists/header.tscn" id="2_b6wtd"]
[ext_resource type="PackedScene" uid="uid://dwn2qsmdqyhiw" path="res://Scenes/UI/Lists/playing_list.tscn" id="3_djaoh"]
[ext_resource type="PackedScene" uid="uid://forsjrvfnym2" path="res://Scenes/UI/Lists/slot_list.tscn" id="4_a8luo"]
[ext_resource type="PackedScene" uid="uid://dph43kayde03u" path="res://Scenes/UI/UIComponents/energy_types.tscn" id="5_b6wtd"]
[ext_resource type="PackedScene" uid="uid://c28rtuj3kak48" path="res://Scenes/UI/Lists/Footer.tscn" id="5_m4yaq"]

[node name="SwapBox" type="Control"]
layout_mode = 3
anchor_right = 0.774
anchor_bottom = 0.831
offset_right = 0.0799561
offset_bottom = -0.320007
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7u88y")

[node name="EnergyUI" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Header" parent="EnergyUI" node_paths=PackedStringArray("dragging_node", "based_on", "shrinkNodes", "hideNodes") instance=ExtResource("2_b6wtd")]
unique_name_in_owner = true
custom_minimum_size = Vector2(836, 0)
layout_mode = 2
dragging_node = NodePath("../..")
based_on = NodePath(".")
shrinkNodes = [NodePath("../PanelContainer/Lists/Slots/SlotList"), NodePath("../PanelContainer/Lists/PlayingList")]
hideNodes = [NodePath("../Footer"), NodePath("../PanelContainer/Lists/Slots/Actions")]

[node name="PanelContainer" type="PanelContainer" parent="EnergyUI"]
layout_mode = 2

[node name="Lists" type="HBoxContainer" parent="EnergyUI/PanelContainer"]
layout_mode = 2

[node name="PlayingList" parent="EnergyUI/PanelContainer/Lists" node_paths=PackedStringArray("par") instance=ExtResource("3_djaoh")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
par = NodePath("../../../..")
allowed_as = 512
stack_act = 4
stack = 4

[node name="Slots" type="VBoxContainer" parent="EnergyUI/PanelContainer/Lists"]
layout_mode = 2

[node name="SlotList" parent="EnergyUI/PanelContainer/Lists/Slots" instance=ExtResource("4_a8luo")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Actions" type="PanelContainer" parent="EnergyUI/PanelContainer/Lists/Slots"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"DeepPannel"

[node name="InfoSection" type="VBoxContainer" parent="EnergyUI/PanelContainer/Lists/Slots/Actions"]
layout_mode = 2

[node name="IndSwap" type="HBoxContainer" parent="EnergyUI/PanelContainer/Lists/Slots/Actions/InfoSection"]
layout_mode = 2

[node name="indSwapNum" type="RichTextLabel" parent="EnergyUI/PanelContainer/Lists/Slots/Actions/InfoSection/IndSwap"]
unique_name_in_owner = true
custom_minimum_size = Vector2(39, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "99/99"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="EnergyUI/PanelContainer/Lists/Slots/Actions/InfoSection/IndSwap"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="EnergyTypes" parent="EnergyUI/PanelContainer/Lists/Slots/Actions/InfoSection/IndSwap/HBoxContainer" instance=ExtResource("5_b6wtd")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(186, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 2
en_count = 6
disabled = true

[node name="Swap" type="Button" parent="EnergyUI/PanelContainer/Lists/Slots/Actions/InfoSection/IndSwap/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(166, 25)
layout_mode = 2
size_flags_vertical = 3
disabled = true
text = "Swap"

[node name="Info&End" type="HBoxContainer" parent="EnergyUI/PanelContainer/Lists/Slots/Actions/InfoSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="Instructions" type="RichTextLabel" parent="EnergyUI/PanelContainer/Lists/Slots/Actions/InfoSection/Info&End"]
unique_name_in_owner = true
custom_minimum_size = Vector2(236, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Reciever: Team Magma's Poochyena"
fit_content = true

[node name="End" type="Button" parent="EnergyUI/PanelContainer/Lists/Slots/Actions/InfoSection/Info&End"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Finish"

[node name="Footer" parent="EnergyUI" node_paths=PackedStringArray("dragging_node") instance=ExtResource("5_m4yaq")]
unique_name_in_owner = true
layout_mode = 2
dragging_node = NodePath("../..")

[connection signal="pressed" from="EnergyUI/PanelContainer/Lists/Slots/Actions/InfoSection/IndSwap/HBoxContainer/Swap" to="." method="_on_swap_pressed"]
[connection signal="pressed" from="EnergyUI/PanelContainer/Lists/Slots/Actions/InfoSection/Info&End/End" to="." method="_on_end_pressed"]
